--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">#VirtualNotif</string>
-    <string name="as_notification_label">Notification Panel</string>
+    <string name="as_notification_label">Open Notification Panel</string>
     <string name="as_back_label">Back Button</string>
     <string name="as_notification_description">Floating Notification Button Service – Tap to open notification panel.</string>
 </resources>
