Added Accessibility Shortcut Label

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">#VirtualBack</string>
     <string name="accessibility_service_description">Floating Back Button Service – Tap to go back from any screen.</string>
+    <string name="as_back_label">Simulate Back</string>
 </resources>
