Added: Axio logo to the menu UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="recents">Open Recents</string>
     <string name="floating_menu_title">Axio</string>
     <string name="floating_menu_subtitle">Quick Accessibility Actions</string>
+    <string name="app_logo">Axio Logo</string>
 </resources>
